--- a/MergeSets.ipynb
+++ b/MergeSets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the CSVs needed to make the join.\n",
     "ticker = pd.read_csv('data/asx-tickers.csv')\n",
+    "ticker_stripped = pd.read_csv('data/asx-tickers_stripped.csv')\n",
     "headlines = pd.read_csv('data/abcnews-date-text.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +79,7 @@
        "1    1AG  ALTERRA LIMITED              Commercial & Professional Services"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,67 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>publish_date</th>\n",
-       "      <th>headline_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20030219</td>\n",
-       "      <td>aba decides against community broadcasting lic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20030219</td>\n",
-       "      <td>act fire witnesses must be aware of defamation</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   publish_date                                      headline_text\n",
-       "0      20030219  aba decides against community broadcasting lic...\n",
-       "1      20030219     act fire witnesses must be aware of defamation"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "headlines.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +240,7 @@
    "source": [
     "## Custom Approach\n",
     "tick_df = ticker.copy();\n",
-    "head_df = headlines.copy().head(1000);\n",
+    "head_df = headlines_filtered.copy().head(1000);\n",
     "head_df['matches'] = None\n",
     "head_df.astype({'matches':'object'})\n",
     "\n",
@@ -299,8 +249,15 @@
     "def vectorize(s):\n",
     "    tokens = normalize(s)\n",
     "    return [ np.array(list(word)) for word in tokens ]\n",
+    "\n",
+    "def vectorizeFirstHalf(s):\n",
+    "    tokens = normalize(s)\n",
+    "    return [ np.array(list(word)) for word in tokens[0:len(tokens)//2] ]\n",
+    "\n",
     "tick_df['comp_vec'] = tick_df['company'].apply(vectorize)\n",
-    "head_df['head_vec'] = head_df['headline_text'].apply(vectorize)\n",
+    "head_df['head_vec'] = head_df['headline_text'].apply(vectorizeFirstHalf)\n",
+    "\n",
+    "print(head_df['head_vec'])\n",
     "\n",
     "def percentage_matching(W, C):\n",
     "    if len(W) < len(C):\n",
@@ -350,13 +307,13 @@
     "    return matchedCompanies[:10]\n",
     "\n",
     "# Uncomment for parallel and comment the bottom part\n",
-    "# tqdm.pandas(desc=\"HALP\")\n",
-    "# def appfun(df):\n",
-    "#     print('GO')\n",
-    "#     return df.progress_apply(findMatches, axis=1)\n",
+    "tqdm.pandas(desc=\"HALP\")\n",
+    "def appfun(df):\n",
+    "    print('GO')\n",
+    "    return df.progress_apply(findMatches, axis=1)\n",
     "\n",
-    "# print(\"Looping...\")\n",
-    "# parallelize(head_df, appfun)\n",
+    "print(\"Looping...\")\n",
+    "parallelize(head_df, appfun)\n",
     "\n",
     "# tqdm_notebook().pandas(\"matching\")\n",
     "# head_df['matches'] = head_df.progress_apply(findMatches, axis=1)\n",
@@ -365,69 +322,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vectorizing...\n",
-      "\n",
-      "Looping...\n",
-      "GO\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "HALP:   0%|          | 29/187597 [00:10<20:55:13,  2.49it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GO\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "HALP:   0%|          | 7/187596 [00:02<21:44:08,  2.40it/s]]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GO\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "HALP:   0%|          | 37/187596 [00:14<18:08:28,  2.87it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GO\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "HALP:   0%|          | 40/187596 [00:15<17:13:04,  3.03it/s]"
-     ]
+     "data": {
+      "text/plain": [
+       "1          act fire witnesses must be aware of defamation\n",
+       "2          a g calls for infrastructure protection summit\n",
+       "3                air nz staff in aust strike for pay rise\n",
+       "4           air nz strike to affect australian travellers\n",
+       "5                       ambitious olsson wins triple jump\n",
+       "7       aussie qualifier stosur wastes four memphis match\n",
+       "8            aust addresses un security council over iraq\n",
+       "9              australia is locked into war timetable opp\n",
+       "10      australia to contribute 10 million in aid to iraq\n",
+       "13          big hopes for launceston cycling championship\n",
+       "14                 big plan to boost paroo water supplies\n",
+       "15                 blizzard buries united states in bills\n",
+       "20        businesses should prepare for terrorist attacks\n",
+       "22                call for ethanol blend fuel to go ahead\n",
+       "24                           cemeteries miss out on funds\n",
+       "25      code of conduct toughens organ donation regula...\n",
+       "26           commonwealth bank cuts fixed home loan rates\n",
+       "29        councillor to contest wollongong as independent\n",
+       "30           council moves to protect tas heritage garden\n",
+       "32                council welcomes insurance breakthrough\n",
+       "34                     dargo fire threat expected to rise\n",
+       "35       death toll continues to climb in s korean subway\n",
+       "36               dems hold plebiscite over iraqi conflict\n",
+       "38                   de villiers to learn fate on march 5\n",
+       "39              digital tv will become commonplace summit\n",
+       "40          direct anger at govt not soldiers crean urges\n",
+       "41      dispute over at smithton vegetable processing ...\n",
+       "43         dying korean subway passengers phoned for help\n",
+       "44                   england change three for wales match\n",
+       "45      epa still trying to recover chemical clean up ...\n",
+       "                              ...                        \n",
+       "1446                              us to saddam time is up\n",
+       "1447        us vice president to see rail work first hand\n",
+       "1449         vic libs face parliament after poll disaster\n",
+       "1451     wa opposition appoints new agriculture spokesman\n",
+       "1453                                warne counts the cost\n",
+       "1455    western countries remain divided over war in iraq\n",
+       "1458              woman charged over possessing rare drug\n",
+       "1459                  youhana lifts pakistan to 9 for 253\n",
+       "1460            abs defends nt population shrinking claim\n",
+       "1461     acb report slams warnes vague and unsatisfactory\n",
+       "1466             akram claims 500 as pakistan downs dutch\n",
+       "1467              alston seizes on glowing telstra report\n",
+       "1469                    amp concedes it was overambitious\n",
+       "1470                               amp confirms 896m loss\n",
+       "1471                       amp losing investor confidence\n",
+       "1472    aquaculture council speaks out over kingfish c...\n",
+       "1473                 army too small to meet demand on sas\n",
+       "1475    asic charges wine giant with bottling up forec...\n",
+       "1476           asic urges caution over insurance policies\n",
+       "1477    asx achieves 11pc profit increase over six months\n",
+       "1478                   asx told mine information withheld\n",
+       "1480    atsic deputy ruddock clash over clarkes court ...\n",
+       "1481                          aussie dollar hits new high\n",
+       "1482                aus sports awards finalists announced\n",
+       "1483                  aust airlines looks to asian market\n",
+       "1484    australia marks 30 years of diplomacy with vie...\n",
+       "1485        australia targeting england win against india\n",
+       "1486        beattie hits out at obscene corporate payouts\n",
+       "1488         bhp billiton native title efforts recognised\n",
+       "1489    black box installation not held up scully insists\n",
+       "Name: headline_text, Length: 1000, dtype: object"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "headlines_filtered['headline_text'].head(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## Set Union Approach for faster computation.\n",
     "tick_df = ticker.copy();\n",
@@ -444,6 +422,180 @@
     "\n",
     "# 2. Headline opertion\n",
     "MIN_SCORE = 0.3\n",
+    "def findMatches(head_record):\n",
+    "    matchedCompanies = []\n",
+    "    headWordList = head_record['head_set']\n",
+    "    \n",
+    "    for _,comp_record in tick_df.iterrows():\n",
+    "        \n",
+    "        companyWordList = comp_record['comp_set']\n",
+    "        matchingHeads = []\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        New option: \n",
+    "            1. Convert headline and company name to set.\n",
+    "            2. Set intersect. \n",
+    "            3. For all common words find it's index in the company name\n",
+    "            4. Can compute the weighted worth of the match.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        companyMatchScore = 0\n",
+    "        shared = headWordList & companyWordList\n",
+    "        if len(shared) > 0:\n",
+    "            for word in shared:\n",
+    "                idx = comp_record['comp_list'].index(word)\n",
+    "                companyMatchScore += (1/(idx+1))\n",
+    "        normalizedScore = companyMatchScore / len(companyWordList)\n",
+    "        if normalizedScore >= MIN_SCORE:\n",
+    "            matchedCompanies.append((comp_record['company'], normalizedScore))\n",
+    "            \n",
+    "                \n",
+    "    matchedCompanies.sort(key=lambda x: x[1], reverse=True)\n",
+    "    return matchedCompanies[:10]\n",
+    "\n",
+    "# Uncomment for parallel and comment the bottom part\n",
+    "tqdm.pandas(desc=\"HALP\")\n",
+    "def appfun(df):\n",
+    "    print('GO')\n",
+    "    return df.progress_apply(findMatches, axis=1)\n",
+    "\n",
+    "print(\"Looping...\")\n",
+    "parallelize(head_df, appfun)\n",
+    "\n",
+    "# tqdm_notebook().pandas(\"matching\")\n",
+    "# head_df['matches'] = head_df.progress_apply(findMatches, axis=1)\n",
+    "# head_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorizing...\n",
+      "Looping...\n",
+      "GO\n",
+      "GO\n",
+      "GO\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "HALP:   0%|          | 0/250 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GO\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HALP: 100%|██████████| 250/250 [01:20<00:00,  2.51it/s]\n",
+      "\n",
+      "HALP: 100%|█████████▉| 249/250 [01:20<00:00,  2.58it/s]\n",
+      "HALP: 100%|██████████| 250/250 [01:21<00:00,  2.70it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1                  []\n",
+       "2                  []\n",
+       "3                  []\n",
+       "4                  []\n",
+       "5                  []\n",
+       "7                  []\n",
+       "8                  []\n",
+       "9                  []\n",
+       "10                 []\n",
+       "13                 []\n",
+       "14                 []\n",
+       "15                 []\n",
+       "20                 []\n",
+       "22                 []\n",
+       "24                 []\n",
+       "25                 []\n",
+       "26                 []\n",
+       "29                 []\n",
+       "30                 []\n",
+       "32                 []\n",
+       "34                 []\n",
+       "35                 []\n",
+       "36                 []\n",
+       "38                 []\n",
+       "39                 []\n",
+       "40                 []\n",
+       "41                 []\n",
+       "43                 []\n",
+       "44                 []\n",
+       "45                 []\n",
+       "            ...      \n",
+       "1446               []\n",
+       "1447               []\n",
+       "1449               []\n",
+       "1451               []\n",
+       "1453               []\n",
+       "1455               []\n",
+       "1458               []\n",
+       "1459               []\n",
+       "1460               []\n",
+       "1461               []\n",
+       "1466               []\n",
+       "1467               []\n",
+       "1469    [(AMP , 1.0)]\n",
+       "1470    [(AMP , 1.0)]\n",
+       "1471    [(AMP , 1.0)]\n",
+       "1472               []\n",
+       "1473               []\n",
+       "1475               []\n",
+       "1476               []\n",
+       "1477    [(ASX , 1.0)]\n",
+       "1478    [(ASX , 1.0)]\n",
+       "1480               []\n",
+       "1481               []\n",
+       "1482               []\n",
+       "1483               []\n",
+       "1484               []\n",
+       "1485               []\n",
+       "1486               []\n",
+       "1488               []\n",
+       "1489               []\n",
+       "Length: 1000, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Set Union Approach for faster computation.\n",
+    "tick_df = ticker_stripped.copy();\n",
+    "head_df = headlines_filtered.copy().head(1000);\n",
+    "head_df['matches'] = None\n",
+    "head_df.astype({'matches':'object'})\n",
+    "\n",
+    "print(\"Vectorizing...\")\n",
+    "# 1. Vectorize companies and headlines in their stripped form.\n",
+    "tick_df['comp_set'] = tick_df['company'].apply(lambda x: set(normalize(x)))\n",
+    "head_df['head_set'] = head_df['headline_text'].apply(lambda x: set(normalize(x)))\n",
+    "tick_df['comp_list'] = tick_df['company'].apply(lambda x: normalize(x))\n",
+    "head_df['head_list'] = head_df['headline_text'].apply(lambda x: normalize(x))\n",
+    "\n",
+    "# 2. Headline opertion\n",
+    "MIN_SCORE = 0.8\n",
     "def findMatches(head_record):\n",
     "    matchedCompanies = []\n",
     "    headWordList = head_record['head_set']\n",
