Working on stitching the good data

--- a/Stitching/stitch.ipynb
+++ b/Stitching/stitch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the CSVs needed to make the join.\n",
-    "ticker = pd.read_csv('data/asx-tickers.csv')\n",
-    "ticker_stripped = pd.read_csv('data/asx-tickers_stripped.csv')\n",
-    "headlines = pd.read_csv('data/abcnews-date-text.csv')"
+    "ticker = pd.read_csv('../data/asx-tickers.csv')\n",
+    "# ticker_stripped = pd.read_csv('../data/asx-tickers_stripped.csv')\n",
+    "headlines = pd.read_csv('../data/abcnews-date-text.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "1    1AG  ALTERRA LIMITED              Commercial & Professional Services"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,10 +90,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1103665\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>publish_date</th>\n",
+       "      <th>headline_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20030219</td>\n",
+       "      <td>aba decides against community broadcasting lic...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20030219</td>\n",
+       "      <td>act fire witnesses must be aware of defamation</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   publish_date                                      headline_text\n",
+       "0      20030219  aba decides against community broadcasting lic...\n",
+       "1      20030219     act fire witnesses must be aware of defamation"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "print(headlines.shape[0])\n",
     "headlines.head(2)"
    ]
   },
@@ -743,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
