Fuzzywuzzy works ok

--- a/Stitching/stitch.ipynb
+++ b/Stitching/stitch.ipynb
@@ -278,7 +278,7 @@
     "    return df.loc[:FIRSTN, 'headline_text'].progress_apply(\n",
     "        fuzzy_match,\n",
     "        args=(\n",
-    "            ticker.loc[:, 'company'].map(lambda x: x.lower()), \n",
+    "            ticker.loc[:, 'company'].map(lambda x: x.title()), \n",
     "            fuzz.partial_ratio,\n",
     "            65\n",
     "        )\n",
@@ -802,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
