Wrote a lot for the site and tweaked some outputs for sharing

--- a/Stitching/SpaCy_Attempt.ipynb
+++ b/Stitching/SpaCy_Attempt.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'spacy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4888b0be2ba2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mspacy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnlp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspacy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'en_core_web_lg'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Need to install the corpus: space download n_core_web_lg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'spacy'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import spacy\n",
@@ -957,23 +969,7 @@
     "                max_sim = (company, sim)\n",
     "    return max_sim\n",
     "sample_test['subject_sim'] = sample_test['subject'].apply(find_most)\n",
-    "sample_test.head(500)\n",
-    "\n",
-    "# # Compute Similarity to Subjects\n",
-    "# sub_sims = []\n",
-    "# for doc in nlp.pipe(sample_test['subject'].astype('unicode').values, batch_size=50, n_threads=3):\n",
-    "#     if doc.is_parsed:\n",
-    "#         max_sim = ('', 0)\n",
-    "#         for token in doc:\n",
-    "#             for company in companies:\n",
-    "#                 sim = token.similarity(company)\n",
-    "#                 if sim > max_sim[1]:\n",
-    "#                     max_sim = (company, sim)\n",
-    "#         sub_sums.append(max_sim[0])\n",
-    "#     else:\n",
-    "#         sub_sims.append(None)\n",
-    "# sample_test['subject_sim'] = sub_sims\n",
-    "# sample_test.head(500)"
+    "sample_test.head(500)"
    ]
   },
   {
