--- a/Stitching/kaggle_nltk_stitching.ipynb
+++ b/Stitching/kaggle_nltk_stitching.ipynb
@@ -15,20 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the CSVs needed to make the join.\n",
-    "ticker = pd.read_csv('../data/asx-tickers.csv')\n",
+    "ticker = pd.read_csv('../data/kaggle/asx-tickers.csv')\n",
     "# ticker_stripped = pd.read_csv('../data/asx-tickers_stripped.csv')\n",
-    "headlines = pd.read_csv('../data/abcnews-date-text.csv')"
+    "headlines = pd.read_csv('../data/kaggle/abcnews-date-text.csv')\n",
+    "value = pd.read_csv('../data/kaggle/asx-equity-price.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -94,13 +97,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1103665\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -152,8 +148,82 @@
     }
    ],
    "source": [
-    "print(headlines.shape[0])\n",
     "headlines.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAA</td>\n",
+       "      <td>19970102</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>2.42</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>62508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAD</td>\n",
+       "      <td>19970102</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>10722</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ticker      date  open  high   low  close  volume\n",
+       "0    AAA  19970102  2.43  2.45  2.42   2.43   62508\n",
+       "1    AAD  19970102  0.74  0.76  0.74   0.75   10722"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value.head(2)"
    ]
   },
   {
@@ -225,7 +295,7 @@
     "    )\n",
     "\n",
     "# Run in parallel\n",
-    "# matching_results = parallelize(headlines, appfun)\n",
+    "matching_results = parallelize(headlines, appfun)\n",
     "# test = headlines[:FIRSTN].copy()\n",
     "# test['match'] = matching_results\n",
     "# test[test['match'].notnull()]"
