Corrected error that prevented counting end days of each chunk

--- a/Sentiment/ScrapedHeadlineMoods.ipynb
+++ b/Sentiment/ScrapedHeadlineMoods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,30 +13,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load Headlines & Clean\n",
     "headlinedata = pd.read_csv('../data/scraped/combined_headlines.csv')\n",
     "headlinedata['titles'] = headlinedata.titles.apply(lambda x: x.strip('\"\\' ' ))\n",
-    "headlines = headlinedata[~headlinedata.titles.duplicated(keep='first')]\n",
     "headlines = headlines.drop(columns=['Unnamed: 0'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(840291, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Load Sentiment, Join, Write to disk\n",
-    "rsentiments = pd.read_csv('test_rsentiments.csv', names = [\"wordCount\", \"sentimentGI\", \"negativityGI\", \"positivityGI\", \n",
+    "# Load Sentiment, Join, Drop Dupes, Write to disk\n",
+    "rsentiments = pd.read_csv('test2_rsentiments.csv', names = [\"wordCount\", \"sentimentGI\", \"negativityGI\", \"positivityGI\", \n",
     "                                                           \"sentimentHE\", \"negativityHE\", \"positivityHE\", \"sentimentLM\",\n",
     "                                                           \"negativityLM\", \"positivityLM\", \"ratioUncertaintyLM\", \"sentimentQDAP\",\n",
     "                                                           \"negativityQDAP\", \"positivityQDAP\", \"direction\"])\n",
+    "\n",
     "Rdata = pd.concat([headlines, rsentiments], axis=1)\n",
-    "Rdata.to_csv(\"../data/headline_sentiment.csv\")"
+    "Rdata = headlines[~headlines.titles.duplicated(keep='first')]\n",
+    "print(Rdata.shape)\n",
+    "# Rdata.to_csv(\"../data/headline_sentiment.csv\")"
    ]
   },
   {
