Dropped nulls from records

--- a/Sentiment/ScrapedHeadlineMoods.ipynb
+++ b/Sentiment/ScrapedHeadlineMoods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,13 @@
     "\n",
     "Rdata = pd.concat([headlines, rsentiments], axis=1)\n",
     "Rdata = Rdata[~Rdata.titles.duplicated(keep='first')]\n",
+    "Rdata = Rdata[~Rdata.isnull().any(axis=1)]\n",
     "Rdata.to_csv(\"../data/headline_sentiment.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
