--- a/Models/NN_Industry.ipynb
+++ b/Models/NN_Industry.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "2 -4.304762  negative  -0.031887  negative 2006-01-03      1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
     "# Clean / Load\n",
     "sentiments = pd.read_csv(\"../data/sentiment/sentiment_days.csv\")\n",
     "sentiments.date = pd.to_datetime(sentiments.date, format='%Y-%m-%d')\n",
-    "tickers = pd.read_csv(\"../data/kaggle/asx-tickers.csv\")\n",
+    "tickers = pd.read_csv(\"../data/asx-tickers.csv\")\n",
     "tickers.drop(['company'], axis=1, inplace=True)\n",
     "stocks = pd.read_csv(\"../data/percent_change/relative_change.csv\")\n",
     "stocks.date = pd.to_datetime(stocks.date, format='%Y%m%d')\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "105 -4.304762  negative  -0.031887  negative 2006-01-03      1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
      "output_type": "stream",
      "text": [
       "(45171, 1)\n",
-      "0.6160453378198885\n"
+      "0.6217125653059418\n"
      ]
     }
    ],
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
